Finally got data to render!

--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -1,4 +1,5 @@
 .jumbotron {
-    background-color:#0000ff;
-    border: black solid;
+    background-color: #000080;
+    border-bottom: black solid;
+    color: #ffffff;
 }
