--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: #000080;
+    background-color: #000080 !important;
     border-bottom: black solid;
     color: #ffffff;
 }
